--- a/mhope/Properties/launchSettings.json
+++ b/mhope/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/pdxweatherstationdata",
+      "launchUrl": "api/raintotals",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
