--- a/RainGauge/RainGauge.fsproj
+++ b/RainGauge/RainGauge.fsproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.Data" Version="3.0.0-beta" />
+    <PackageReference Include="FSharp.Data" Version="3.0.0-beta3" />
   </ItemGroup>
 
   <ItemGroup>
