Add airquality controller

--- a/mhope/martyhope.com.csproj
+++ b/mhope/martyhope.com.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AirQuality.Domain.Standard\AirQuality.Domain.Standard.csproj" />
     <ProjectReference Include="..\RainGauge\RainGauge.fsproj" />
   </ItemGroup>
 
